--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Моя призентация</title>
 </head>
 <body>
+<a href="krossvordRU.html">Русский кроссворд</a>
+<a href="krossvordEN.html">Русский кроссворд</a>
 
 <р>
 Нажмите, чтобы скачать или открыть призентацию:
