--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 <title>Моя призентация</title>
 </head>
-<body>
-<a href="krossvordRU.html">Русский кроссворд</a>
+<body><a href="krossvordRU.html">Русский кроссворд</a>
 <a href="krossvordEN.html">Русский кроссворд</a>
 
 <р>
